# python-boilerplate

./: .env  .flake8  .gitignore  README.md  pyproject.toml
src/: main.py  test.ipynb
tests/: __init__.py  test_main.py
