[project]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "acalvino4", email = "acalvino4@gmail.com"},
]
dependencies = [
    "notebook>=6.4.12",
    "flake8>=4.0.1",
    "flake8-black>=0.3.3",
    "flake8-mypy>=17.8.0",
    "flake8-docstrings>=1.6.0",
    "flake8-bandit>=3.0.0",
    "flake8-isort>=4.1.1",
    "pytest>=7.1.2"]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
test = "pytest"
lint = "black ."

[tool.flake8]
max-line-length = 88
extend-ignore = 'E203'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
